# algokit-fullstack-template

./: copier.yaml  pytest-junit.xml
.github/workflows/: cd.yaml  check-python.yaml
ai-marketplace/: .algokit.toml  README.md  ai-marketplace.code-workspace
ai-marketplace/.algokit/: .copier-answers.yml
ai-marketplace/projects/: agent.py
ai-marketplace/projects/ai-marketplace-contracts/: .algokit.toml  README.md  pyproject.toml
ai-marketplace/projects/ai-marketplace-contracts/.algokit/: .copier-answers.yml
ai-marketplace/projects/ai-marketplace-frontend/: .algokit.toml  README.md  agent.py  package-lock.json  package.json
ai-marketplace/projects/ai-marketplace-frontend/.algokit/: .copier-answers.yml
ai-marketplace/projects/ai-marketplace-frontend/src/: App.tsx
examples/p-py/.algokit/: .copier-answers.yml
examples/p-py/projects/p-py-contracts/: pyproject.toml
examples/p-py/projects/p-py-frontend/: package.json  tsconfig.json
examples/p-tls/.algokit/: .copier-answers.yml
examples/p-tls/projects/p-tls-frontend/: package.json
examples/p-ts/.algokit/: .copier-answers.yml
examples/s-py/.algokit/: .copier-answers.yml
examples/s-py/projects/s-py-contracts/: README.md  package.json  pyproject.toml  tsconfig.json
examples/s-py/projects/s-py-contracts/.algokit/: .copier-answers.yml
examples/s-py/projects/s-py-contracts/smart_contracts/: index.ts
examples/s-tls/.algokit/: .copier-answers.yml
examples/s-ts/.algokit/: .copier-answers.yml
template_content/inject_content/: AppCalls.tsx.jinja
tests/: test_templates.py
(+83 files in other folders)
